--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "path_to_submodule"] 
   path = react/reactprod 
-  url = git://https://github.com/fsotelos/reactprod/
+  url = https://github.com/fsotelos/reactprod/
