--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,5 @@
   url = https://github.com/fsotelos/reactprod/
 
 [submodule "vueprod"]
-	path = vueprod
+	path = vue/vueprod
 	url = https://github.com/fsotelos/vueprod/
