--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "path_to_submodule"] 
   path = react/reactprod 
   url = https://github.com/fsotelos/reactprod/
+[submodule "vue/vueprod"]
+	path = vue/vueprod
+	url = https://github.com/fsotelos/vueprod/
