--- a/.gitmodules
+++ b/.gitmodules
@@ -2,4 +2,5 @@
   path = react/reactprod 
   url = https://github.com/fsotelos/reactprod/
 [submodule "vue/vueprod"]
-	path = vue/vueprod
+  path = vue/vueprod
+  url = https://github.com/fsotelos/vueprod/
